# openDevices

./: .gitignore  CMakeLists.txt  Queue.hpp  README.md  Vector.hpp  main.cpp  openDevices.ERROR  openDevices.INFO  openDevices.WARNING  openDevices.lining-ubuntu.lining.log.ERROR.20240104-191320.195765  openDevices.lining-ubuntu.lining.log.INFO.20240104-162049.129650  openDevices.lining-ubuntu.lining.log.INFO.20240104-191320.195765  openDevicesConf.ini  version.h
common/: CRC.cpp  CRC.h  common.cpp  common.h  config.cpp  config.h  proc.cpp  proc.h
conan/: build_arm.sh  conanfile.txt
data/: Data.cpp  Data.h
glogHelper/: GlogHelper.cpp
kafka/: KafkaCom.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
localBussiness/: localBusiness.cpp  localBusiness.h
myTcp/: MyTcpClient.hpp  MyTcpHandler.hpp  MyTcpServer.hpp
os/: os.cpp  os.h
ringbuffer/: RingBuffer.cpp  RingBuffer.h
signalLight/SLType2/: SLType2.cpp  SLType2.h
test/: CMakeLists.txt  testClient.cpp
